# fastapi_lms

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 22e3737a4cd2_init_users.py
src/: __init__.py  application.py  db.py  main.py  settings.py
src/users/: models.py  routers.py  schemas.py  selectors.py
tests/: conftest.py
tests/integrational/src/users/: test_routers.py
tests/integrational/users/: test_selectors.py
tests/plugins/: factories.py  setup.py
tests/unit/src/users/: test_selectors.py
