[tool.poetry]
name = "fastapi-lms"
version = "0.1.0"
description = ""
authors = ["Alexandr Gattunen <aleksandr.gattunen@skillbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["standard"], version = "^0.112.0"}
uvicorn = "^0.30.5"
SQLAlchemy = {extras = ["mypy"], version = "^2.0.32"}
pydantic = "^2.8.2"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
celery = "^5.4.0"
redis = "^5.0.8"
alembic = "^1.13.2"
greenlet = "^3.0.3"
sqlmodel = "^0.0.21"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.4.0"
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
