[tool.poetry]
name = "fastapi-lms"
version = "0.1.0"
description = ""
authors = ["Alexandr Gattunen <aleksandr.gattunen@skillbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["standard"], version = "^0.112.0"}
uvicorn = "^0.30.5"
SQLAlchemy = {extras = ["mypy"], version = "^2.0.32"}
pydantic = "^2.8.2"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
celery = "^5.4.0"
redis = "^5.0.8"
alembic = "^1.13.2"
greenlet = "^3.0.3"
sqlmodel = "^0.0.21"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.4.0"
pre-commit = "^3.8.0"
pytest = "^8.3.2"
pytest-dotenv = "^0.5.2"
setuptools = "^72.2.0"
pytest-asyncio = "^0.24.0"
pytest-env = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env = [
    "DB_NAME=test_fastapi_local"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"